Aufgaben/Ingress für Zwei Apps/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dev
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: k8s-app
    app.kubernetes.io/version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: k8s-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: k8s-app
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: app
          image: snic/k8s-app
          ports:
            - name: http
              containerPort: 5000
