Aufgaben/Ingress für Zwei Apps/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/instance: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/version: "1.24"
    spec:
      containers:
        - name: nginx
          image: nginx:1.24-alpine
