Aufgaben/Ingress für Zwei Apps/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: k8s-app
    app.kubernetes.io/version: v1
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: k8s-app
