Aufgaben/Ingress für Zwei Apps/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pod
  namespace: frontend
spec:
    type: ClusterIP
    ports:
      - name: http
        port: 80
        targetPort: 80
    selector:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/version: "1.24"
