Aufgaben/Ingress für Zwei Apps/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-redis
  namespace: app
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/version: "7.2.4"
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
