Aufgaben/Ingress für Zwei Apps/ing-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  rules:
    - host: nico.app.k8sw.devninjas.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-app
                port:
                  name: http
