Aufgaben/Ingress für Zwei Apps/ing-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
spec:
  rules:
    - host: nico.webseite.k8sw.devninjas.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-pod
                port:
                  number: 80
